--- a/JICHANGEAPI/JICHANGEAPI.csproj
+++ b/JICHANGEAPI/JICHANGEAPI.csproj
@@ -414,7 +414,78 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="ClientApp\src\web.config" />
+    <Content Include="Scripts\ClientApp\assets\i18n\auth\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\auth\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\company\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\company\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\dashboard\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\dashboard\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\reports\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\reports\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\setup\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\setup\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\company\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\company\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\customer\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\customer\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\dashboard\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\dashboard\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\generated\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\generated\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\invoice\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\invoice\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\reports\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\reports\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-4.webp" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-5.avif" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-6.avif" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-8.avif" />
+    <Content Include="Scripts\ClientApp\assets\temp\data.json" />
+    <Content Include="Scripts\ClientApp\bootstrap-icons.70a9dee9e5ab72aa.woff" />
+    <Content Include="Scripts\ClientApp\bootstrap-icons.bfa90bda92a84a6a.woff2" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\ClientApp\147.8dac344a23d458a6.js" />
+    <Content Include="Scripts\ClientApp\239.1c2bfad6c3c2e5e4.js" />
+    <Content Include="Scripts\ClientApp\3rdpartylicenses.txt" />
+    <Content Include="Scripts\ClientApp\475.125a4b906e5b5586.js" />
+    <Content Include="Scripts\ClientApp\66.c6ba10ec3cb32461.js" />
+    <Content Include="Scripts\ClientApp\962.cbf05ce752f01439.js" />
+    <Content Include="Scripts\ClientApp\973.d97fe30fded65581.js" />
+    <Content Include="Scripts\ClientApp\assets\img\b-4.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-1.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-2.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-3.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-7.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-9.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\Cancelled.png" />
+    <Content Include="Scripts\ClientApp\assets\img\check-mark.png" />
+    <Content Include="Scripts\ClientApp\assets\img\customer-review.png" />
+    <Content Include="Scripts\ClientApp\assets\img\gb.png" />
+    <Content Include="Scripts\ClientApp\assets\img\girl-1 %281%29.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\icons\arrow_right_alt_FILL0_wght400_GRAD0_opsz24.png" />
+    <Content Include="Scripts\ClientApp\assets\img\icons\description_FILL0_wght400_GRAD0_opsz24.png" />
+    <Content Include="Scripts\ClientApp\assets\img\icons\download_FILL0_wght400_GRAD0_opsz24.png" />
+    <Content Include="Scripts\ClientApp\assets\img\icons\more_vert_FILL0_wght400_GRAD0_opsz24.png" />
+    <Content Include="Scripts\ClientApp\assets\img\jichangelogo.png" />
+    <Content Include="Scripts\ClientApp\assets\img\LB-featured-image-template.png" />
+    <Content Include="Scripts\ClientApp\assets\img\logo-1.png" />
+    <Content Include="Scripts\ClientApp\assets\img\logo-3.png" />
+    <Content Include="Scripts\ClientApp\assets\img\logo.png" />
+    <Content Include="Scripts\ClientApp\assets\img\man.png" />
+    <Content Include="Scripts\ClientApp\assets\img\sample-signature.png" />
+    <Content Include="Scripts\ClientApp\assets\img\transaction.png" />
+    <Content Include="Scripts\ClientApp\assets\img\tz.png" />
+    <Content Include="Scripts\ClientApp\assets\img\WhatsApp-Image-2023-03-23-at-12.15.59-PM.jpeg" />
+    <Content Include="Scripts\ClientApp\assets\img\wilsan-u-LltVVoYNpIw-unsplash.jpg" />
+    <Content Include="Scripts\ClientApp\bootstrap-icons.svg" />
+    <Content Include="Scripts\ClientApp\favicon.ico" />
+    <Content Include="Scripts\ClientApp\index.html" />
+    <Content Include="Scripts\ClientApp\main.8fe4f6cd1c3290c1.js" />
+    <Content Include="Scripts\ClientApp\polyfills.702a62fb92d5fdf1.js" />
+    <Content Include="Scripts\ClientApp\runtime.b5a71d318768cc58.js" />
+    <Content Include="Scripts\ClientApp\styles.742bf1f10786f16c.css" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
