--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,9 @@ c## Ignore Visual Studio temporary files, build results, and
 mono_crash.*
 
 # Build results
-[Dd]ebug/
+#[Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
+#[Rr]elease/
 [Rr]eleases/
 x64/
 x86/
