--- a/JICHANGEAPI/ClientApp/angular.json
+++ b/JICHANGEAPI/ClientApp/angular.json
@@ -20,43 +20,16 @@
             "outputPath": "../Scripts/ClientApp",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": ["zone.js" ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              //{
-              //"glob": "**/*",
-              //"input": "public",
-
-              //"input": "./src/assets",
-              //"output": "/"
-
-              //"glob": "**/*",
-              //"input": "./src/assets/img"
-              //},
-              //"src/assets",
-              //"../ClientApp/src/assets",
-
-              {
-                "glob": "*.svg",
-                "input": "./node_modules/bootstrap-icons/",
-                "output": "/"
-              }
-            ],
-            "styles": [
-              "src/styles.scss",
-              "node_modules/sweetalert2/src/sweetalert2.scss",
-              "node_modules/ngx-toastr/toastr.css",
-              "src/m3-theme.scss"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.scss", "src/m3-theme.scss"],
             "scripts": [],
             "allowedCommonJsDependencies": [
               "jspdf-autotable",
-              "sweetalert2",
-              "file-saver",
-              "xlsx/dist/xlsx.mini.min",
+              "dompurify",
+              "html2canvas",
               "rgbcolor",
               "raf",
               "core-js/modules/web.dom-collections.iterator.js",
@@ -129,21 +102,8 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "*.svg",
-                "input": "./node_modules/bootstrap-icons/",
-                "output": "/"
-              }
-            ],
-            "styles": [
-              "src/styles.scss",
-              "node_modules/sweetalert2/src/sweetalert2.scss",
-              "node_modules/ngx-toastr/toastr.css",
-              "src/m3-theme.scss"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.scss", "src/m3-theme.scss"],
             "scripts": []
           }
         }
