--- a/BIZINVOICING/packages.config
+++ b/BIZINVOICING/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="3.3.7" targetFramework="net48" />
   <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.13.4" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net48" />
