--- a/BL.BIZINVOICING/packages.config
+++ b/BL.BIZINVOICING/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.13.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net461" />
