--- a/JICHANGEAPI/JICHANGEAPI.csproj
+++ b/JICHANGEAPI/JICHANGEAPI.csproj
@@ -1755,7 +1755,74 @@
     <Content Include="ClientApp\tsconfig.app.json" />
     <Content Include="ClientApp\tsconfig.json" />
     <Content Include="ClientApp\tsconfig.spec.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\auth\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\auth\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\company\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\company\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\dashboard\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\dashboard\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\reports\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\reports\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\setup\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\bank\setup\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\company\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\company\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\customer\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\customer\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\dashboard\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\dashboard\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\generated\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\generated\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\invoice\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\invoice\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\reports\en.json" />
+    <Content Include="Scripts\ClientApp\assets\i18n\vendor\reports\sw.json" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-4.webp" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-5.avif" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-6.avif" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-8.avif" />
+    <Content Include="Scripts\ClientApp\assets\temp\data.json" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\ClientApp\147.2de947f9a10e93a3.js" />
+    <Content Include="Scripts\ClientApp\239.22b40b15aa0321b6.js" />
+    <Content Include="Scripts\ClientApp\288.15b0a19b65ec03ca.js" />
+    <Content Include="Scripts\ClientApp\3rdpartylicenses.txt" />
+    <Content Include="Scripts\ClientApp\962.36442d9d3573c7e8.js" />
+    <Content Include="Scripts\ClientApp\973.0fb2ed84be33450c.js" />
+    <Content Include="Scripts\ClientApp\assets\img\b-4.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-1.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-2.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-3.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-7.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\bg-9.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\Cancelled.png" />
+    <Content Include="Scripts\ClientApp\assets\img\check-mark.png" />
+    <Content Include="Scripts\ClientApp\assets\img\customer-review.png" />
+    <Content Include="Scripts\ClientApp\assets\img\gb.png" />
+    <Content Include="Scripts\ClientApp\assets\img\girl-1 %281%29.jpg" />
+    <Content Include="Scripts\ClientApp\assets\img\icons\arrow_right_alt_FILL0_wght400_GRAD0_opsz24.png" />
+    <Content Include="Scripts\ClientApp\assets\img\icons\description_FILL0_wght400_GRAD0_opsz24.png" />
+    <Content Include="Scripts\ClientApp\assets\img\icons\download_FILL0_wght400_GRAD0_opsz24.png" />
+    <Content Include="Scripts\ClientApp\assets\img\icons\more_vert_FILL0_wght400_GRAD0_opsz24.png" />
+    <Content Include="Scripts\ClientApp\assets\img\jichangelogo.png" />
+    <Content Include="Scripts\ClientApp\assets\img\LB-featured-image-template.png" />
+    <Content Include="Scripts\ClientApp\assets\img\logo-1.png" />
+    <Content Include="Scripts\ClientApp\assets\img\logo-3.png" />
+    <Content Include="Scripts\ClientApp\assets\img\logo.png" />
+    <Content Include="Scripts\ClientApp\assets\img\man.png" />
+    <Content Include="Scripts\ClientApp\assets\img\sample-signature.png" />
+    <Content Include="Scripts\ClientApp\assets\img\transaction.png" />
+    <Content Include="Scripts\ClientApp\assets\img\tz.png" />
+    <Content Include="Scripts\ClientApp\assets\img\WhatsApp-Image-2023-03-23-at-12.15.59-PM.jpeg" />
+    <Content Include="Scripts\ClientApp\assets\img\wilsan-u-LltVVoYNpIw-unsplash.jpg" />
+    <Content Include="Scripts\ClientApp\favicon.ico" />
+    <Content Include="Scripts\ClientApp\index.html" />
+    <Content Include="Scripts\ClientApp\main.d3b4abde75d39e5c.js" />
+    <Content Include="Scripts\ClientApp\polyfills.06c008af07a279fd.js" />
+    <Content Include="Scripts\ClientApp\runtime.69e6e7f936153f40.js" />
+    <Content Include="Scripts\ClientApp\styles.4249a9b8d2f6a177.css" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
