--- a/JICHANGEAPI/JICHANGEAPI.csproj
+++ b/JICHANGEAPI/JICHANGEAPI.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Models\form\AddSmtpModel.cs" />
     <Compile Include="Models\form\AuditTrailForm.cs" />
     <Compile Include="Models\form\CustomersDetailsForm.cs" />
+    <Compile Include="Models\form\DownloadInvoice.cs" />
     <Compile Include="Models\form\InvoiceDetailsForm.cs" />
     <Compile Include="Models\form\InvoiceReportDetailsForm.cs" />
     <Compile Include="Models\form\ResendUserCredentialsForm.cs" />
