--- a/JICHANGEAPI/ClientApp/package.json
+++ b/JICHANGEAPI/ClientApp/package.json
@@ -27,6 +27,7 @@
     "@ng-idle/core": "^14.0.0",
     "@ng-idle/keepalive": "^14.0.0",
     "@ngneat/transloco": "^6.0.4",
+    "animejs": "^3.2.2",
     "chart.js": "^4.4.2",
     "daisyui": "^3.5.0",
     "jichange": "file:",
@@ -46,6 +47,7 @@
     "@angular-builders/custom-webpack": "^17.0.1",
     "@angular-devkit/build-angular": "^18.2.5",
     "@angular/compiler-cli": "^17.3.2",
+    "@types/animejs": "^3.1.13",
     "@types/html-pdf": "^3.0.3",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.17",
