--- a/JICHANGEAPI/ClientApp/package.json
+++ b/JICHANGEAPI/ClientApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@angular/animations": "^17.3.2",
     "@angular/cdk": "^18.2.0",
+    "@angular/cli": "^19.2.1",
     "@angular/common": "^17.3.2",
     "@angular/compiler": "^17.3.2",
     "@angular/core": "^17.3.2",
